# OrbbecSDK_ROS2

orbbec_description/: CMakeLists.txt
orbbec_description/hooks/: orbbec_description.dsv.in  orbbec_description.sh.in
